Change project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+*/node_modules
 /node_modules
 /.pnp
 .pnp.*
@@ -47,3 +48,4 @@ __pycache__/
 /scripts/data/*/
 __marimo__
 venv
+.venv
