--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,5 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./src:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+      - ./src/backend:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
